--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/ex3-ms-dtos"]
 	path = submodules/ex3-ms-dtos
 	url = https://github.com/abhi08999/ex3-ms-dtos.git
+[submodule "submodules/rabbitmq-broker"]
+	path = submodules/rabbitmq-broker
+	url = https://github.com/abhi08999/rabbitmq-broker.git
